--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
   "require": {
     "craftcms/cms": "3.1.3",
-    "vlucas/phpdotenv": "^2.4.0"
+    "vlucas/phpdotenv": "^2.4.0",
+    "craftcms/redactor": "^2.3",
+    "craftcms/aws-s3": "^1.0"
   },
   "autoload": {
     "psr-4": {
