🔧  Add AWS configuration to env file

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,18 @@ DB_TABLE_PREFIX=""
 
 # The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
 DB_PORT=""
+
+# local development URL for browser sync
+LOCAL_URL=""
+
+# The AWS API key with read/write access to S3
+S3_API_KEY=""
+
+# The AWS API key secret
+S3_SECRET=""
+
+# The name of the S3 bucket
+S3_BUCKET=""
+
+# The region the S3 bucket is in
+S3_REGION=""
