--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "craftcms/cms": "3.1.3",
     "vlucas/phpdotenv": "^2.4.0",
     "craftcms/redactor": "^2.3",
-    "craftcms/aws-s3": "^1.0"
+    "craftcms/aws-s3": "^1.0",
+    "craftcms/contact-form": "^2.2"
   },
   "autoload": {
     "psr-4": {
