--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "vlucas/phpdotenv": "^2.4.0",
     "craftcms/redactor": "^2.3",
     "craftcms/aws-s3": "^1.0",
-    "craftcms/contact-form": "^2.2"
+    "craftcms/contact-form": "^2.2",
+    "rias/craft-contact-form-extensions": "^1.0"
   },
   "autoload": {
     "psr-4": {
