--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "craftcms/aws-s3": "^1.0",
     "craftcms/contact-form": "^2.2",
     "rias/craft-contact-form-extensions": "^1.0",
-    "verbb/feed-me": "^3.1"
+    "verbb/feed-me": "^3.1",
+    "craftcms/element-api": "^2.5"
   },
   "autoload": {
     "psr-4": {
