--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "craftcms/contact-form": "^2.2",
     "rias/craft-contact-form-extensions": "^1.0",
     "verbb/feed-me": "^3.1",
-    "craftcms/element-api": "^2.5"
+    "craftcms/element-api": "^2.5",
+    "nystudio107/craft-seomatic": "^3.1"
   },
   "autoload": {
     "psr-4": {
