--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
           paths:
             - node_modules
 
-  deploy:
+  deploy_dev:
     docker:
       - image: alpine:latest
 
@@ -87,7 +87,7 @@ jobs:
       - checkout
       - add_ssh_keys:
           fingerprints:
-            - "62:44:60:a7:25:43:43:27:b2:2e:87:48:76:89:cb:97"
+            - '62:44:60:a7:25:43:43:27:b2:2e:87:48:76:89:cb:97'
       - run:
           name: Move Workspace Artifacts
           command: |
@@ -101,16 +101,53 @@ jobs:
           name: rsync Deploy
           command: rsync --copy-unsafe-links -rvzcSle 'ssh -p 22 -o StrictHostKeyChecking=no -i id_rsa' --exclude-from '.rsyncignore' ./ deployments@audiocrawl.digitalsurgeonsdev.com:/var/www/audiocrawl
 
+  deploy_stage:
+    docker:
+      - image: alpine:latest
+
+    steps:
+      - run:
+          name: Install deployment packages
+          command: apk add --no-cache ca-certificates openssh-client rsync
+      - *attach_workspace
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - '62:44:60:a7:25:43:43:27:b2:2e:87:48:76:89:cb:97'
+      - run:
+          name: Move Workspace Artifacts
+          command: |
+            set -exu
+            mkdir -p vendor
+            mkdir -p public_html/dist
+            mv /tmp/workspace/vendor/* vendor/
+            mv /tmp/workspace/dist/* web/dist/
+
+      - run:
+          name: rsync Deploy
+          command: rsync --copy-unsafe-links -rvzcSle 'ssh -p 22 -o StrictHostKeyChecking=no -i id_rsa' --exclude-from '.rsyncignore' ./ root@audiocrawl.io:/var/www/stage.audiocrawl.io
+
 workflows:
   version: 2
   build_dev:
     jobs:
       - build_backend
       - build_frontend
-      - deploy:
+      - deploy_dev:
           requires:
             - build_backend
             - build_frontend
           filters:
             branches:
               only: develop
+  build_stage:
+    jobs:
+      - build_backend
+      - build_frontend
+      - deploy_stage:
+          requires:
+            - build_backend
+            - build_frontend
+          filters:
+            branches:
+              only: master
