--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,7 +125,7 @@ jobs:
 
       - run:
           name: rsync Deploy
-          command: rsync --copy-unsafe-links -rvzcSle 'ssh -p 22 -o StrictHostKeyChecking=no -i id_rsa' --exclude-from '.rsyncignore' ./ root@audiocrawl.io:/var/www/stage.audiocrawl.io
+          command: rsync --copy-unsafe-links -rvzcSle 'ssh -p 22 -o StrictHostKeyChecking=no -i id_rsa' --exclude-from '.rsyncignore' ./ root@stage.audiocrawl.io:/var/www/stage.audiocrawl.io
 
 workflows:
   version: 2
