👷  Configuring staging deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,7 +140,7 @@ workflows:
           filters:
             branches:
               only: develop
-      - deploy_stage:
+      - deploy_dev:
           requires:
             - build_backend
             - build_frontend
