--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,6 +1,17 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
+    SetEnvIf Host stage.audiocrawl.io passreq
+    SetEnvIf Host audiocrawl.io passreq
+    AuthType Basic
+    AuthName "My Protected Area"
+    AuthUserFile /var/www/.htpasswd
+    Require valid-user
+    Order allow,deny
+    Allow from all
+    Deny from env=passreq
+    Satisfy any
+
     # Send would-be 404 requests to Craft
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
