--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
   "require": {
-    "craftcms/cms": "3.1.17.1",
+    "craftcms/cms": "3.1.21.1",
     "vlucas/phpdotenv": "^2.4.0",
     "craftcms/redactor": "^2.3",
-    "craftcms/aws-s3": "1.2.1",
-    "craftcms/contact-form": "^2.2",
-    "rias/craft-contact-form-extensions": "^1.1",
-    "verbb/feed-me": "3.1.15",
+    "craftcms/aws-s3": "1.2.2",
+    "craftcms/contact-form": "2.2.4",
+    "rias/craft-contact-form-extensions": "1.1.4",
+    "verbb/feed-me": "3.1.16",
     "craftcms/element-api": "^2.5",
-    "nystudio107/craft-seomatic": "^3.1.45",
-    "workingconcept/craft-cloudflare": "^0.2.8"
+    "nystudio107/craft-seomatic": "3.1.47",
+    "workingconcept/craft-cloudflare": "0.2.9"
   },
   "autoload": {
     "psr-4": {
